# mobile-app-sandbox

./: CLAUDE.md  README.md
chat-mobile/: app.json  package-lock.json  package.json  tsconfig.json
chat-mobile/app/: _layout.tsx  index.tsx
chat-mobile/app/(app)/(tabs)/: _layout.tsx  chats.tsx  settings.tsx
chat-mobile/app/(auth)/: _layout.tsx  login.tsx  register.tsx
chat-mobile/src/components/ui/: Avatar.tsx  Button.tsx  Input.tsx
chat-mobile/src/services/: grpc.ts
rust-chat-server/: Cargo.toml  build.rs
rust-chat-server/src/: main.rs
rust-chat-server/src/grpc/: health.rs
shared/proto/: buf.gen.yaml  buf.yaml
shared/proto/chat/v1/: health.proto
